--- a/src/main/webapp/foreman.html
+++ b/src/main/webapp/foreman.html
@@ -25,11 +25,17 @@
     <el-aside width="200px" style="background-color: rgb(238, 241, 246)">
         <el-menu :default-openeds="['1', '3']">
 
-            <el-menu-item index="1">工程小组</el-menu-item>
+            <el-menu-item index="1">
+                <el-button @click="teamButton" target="_blank">工程小队</el-button>
+            </el-menu-item>
 
-            <el-button @click="personInfo" target="_blank">个人信息</el-button>
+            <el-menu-item index="2">
+                <el-button @click="personInfo" target="_blank">个人信息</el-button>
+            </el-menu-item>
 
-            <el-menu-item index="3">消息通知</el-menu-item>
+            <el-menu-item index="3">
+                <el-button @click="noticeButton" target="_blank">消息通知</el-button>
+            </el-menu-item>
         </el-menu>
     </el-aside>
 
@@ -90,7 +96,7 @@
                     <el-table-column
                             prop="allTaskCount"
                             align="center"
-                            label="完成/总数"
+                            label="完成/子任务总数"
                     >
                     </el-table-column>
 
@@ -198,12 +204,11 @@
             </el-table>
         </template>
 
-
         <!--        对我的成员添加任务的对话框-->
         <el-dialog title="添加任务" :visible.sync="teamAddFormVisible">
             <el-form ref="addTask" :model="addTask" label-width="80px" :rules="rules">
                 <el-form-item label="任务名称" prop="taskName">
-                    <el-input v-model="addTask.taskName" autocomplete="off"></el-input>
+                    <el-input v-model.trim="addTask.taskName" autocomplete="off"></el-input>
                 </el-form-item>
                 <el-form-item label="任务难度" prop="level">
                     <template>
@@ -229,7 +234,7 @@
         <el-dialog title="修改任务" :visible.sync="teamModifyFormVisible">
             <el-form ref="modifyTask" :model="modifyTask" label-width="80px" :rules="rules">
                 <el-form-item label="任务名称" prop="taskName">
-                    <el-input v-model="modifyTask.taskName" autocomplete="off"></el-input>
+                    <el-input v-model.trim="modifyTask.taskName" autocomplete="off"></el-input>
                 </el-form-item>
                 <el-form-item label="任务难度" prop="level">
                     <template>
@@ -257,7 +262,7 @@
         <el-form :inline="true" :model="queryUser" class="queryUser">
 
             <el-form-item label="小工姓名">
-                <el-input v-model="queryUser.userName" placeholder="小工姓名"></el-input>
+                <el-input v-model.trim="queryUser.userName" placeholder="小工姓名"></el-input>
             </el-form-item>
 
             <el-form-item label="性别">
@@ -407,6 +412,15 @@
 
         },
         data() {
+            const validateUserName = (rule, value, callback) => {
+                const _this = this;
+                let a = 'SCRIPT',b = 'script',c = 'html';
+                if(value.indexOf(a) > 0||value.indexOf(b) > 0||value.indexOf(c) > 0){
+                    callback(new Error("请勿输入非法字符"));
+                }else{
+                    callback();
+                }
+            };
 
 
             //截止日期校验(不能晚于父级任务的时间,不能早于现在,总负责人就只有一个不能早于现在)
@@ -491,6 +505,7 @@
                     taskName: [
                         {required: true, message: '请输入任务名称', trigger: 'blur'},
                         {min: 2, max: 20, message: '长度在 2 到 20 个字符', trigger: 'blur'},
+                        {validator: validateUserName, trigger: 'blur'}
                     ],
                     deadline: [
                         {required: true, message: '请输入截止日期', trigger: 'blur'},
@@ -690,7 +705,7 @@
                         data: row.userId,
                     }).then(function (resp) {
                         if (resp.data.code === 200) {
-                            setTimeout(_this.refresh, 100);
+                            setTimeout(_this.refresh, 500);
                         }
                     })
                 }).catch(() => {
@@ -752,7 +767,9 @@
                                 document.getElementById("teamAddButton").disabled = true;
                                 _this.teamAddFormVisible = false;
                                 _this.$message.success("任务添加成功");
-                                setTimeout(_this.refresh, 100);
+                                setTimeout(_this.refresh, 500);
+                            }else if (resp.data.code === 400) {
+                                _this.$message.error(resp.data.msg);
                             }
                         })
                     } else {
@@ -780,6 +797,8 @@
                                 _this.teamModifyFormVisible = false;
                                 _this.$message.success("任务修改成功");
                                 setTimeout(_this.refresh, 500);
+                            }else if (resp.data.code === 400) {
+                                _this.$message.error(resp.data.msg);
                             }
                         })
                     } else {
@@ -877,7 +896,7 @@
                         data: row.userId + "&" + row.taskId,
                     }).then(function (resp) {
                         if (resp.data.code === 200) {
-                            setTimeout(_this.refresh, 100);
+                            setTimeout(_this.refresh, 500);
                         }
                     })
 
@@ -892,6 +911,14 @@
             //个人信息跳转
             personInfo() {
                 window.location.href = "http://localhost:8080/qg-engineering-management-system/personalInfo.html";
+            },
+
+            teamButton(){
+                window.location.href = "http://localhost:8080/qg-engineering-management-system/foreman.html";
+            },
+
+            noticeButton(){
+                window.location.href = "http://localhost:8080/qg-engineering-management-system/notice.html";
             },
             //获取我的队伍的信息
             selectMyTeam(username) {
@@ -931,7 +958,7 @@
 
                                 _this.dialogFormVisible = false;
                                 _this.$message.success("任务添加成功");
-                                setTimeout(_this.refresh, 100);
+                                setTimeout(_this.refresh, 500);
                             }
                         })
                     } else {
@@ -987,7 +1014,7 @@
                     if (resp.data.code === 200) {
                         _this.$message.success("恭喜你,任务已完成");
                         _this.myTaskTableData[0].taskId = 0;
-                        setTimeout(_this.refresh, 100);
+                        setTimeout(_this.refresh, 500);
 
                     } else if (resp.data.code === 600210) {
                         _this.$message.error(resp.data.msg);
