--- a/src/main/webapp/personalInfo.html
+++ b/src/main/webapp/personalInfo.html
@@ -313,7 +313,9 @@
 
                             } else if (resp.data.code === 500200) {
                                 _this.$message.error(resp.data.msg);
-                            } else {
+                            } else if (resp.data.code === 400) {
+                                _this.$message.error(resp.data.msg);
+                            }else {
                                 _this.$message.error('未知错误,请联系管理员');
                             }
                             _this.dialogFormVisible = false;
@@ -373,20 +375,6 @@
                         const _this = this;
                         //若是全部没有进行修改,不应该发送请求
 
-                        // console.log("old = "+ _this.oldUser.username);
-                        // console.log("new = "  + _this.user.username);
-                        // if (_this.user.username === _this.oldUser.username
-                        //     && _this.user.email === _this.oldUser.email
-                        // && _this.user.gender === _this.oldUser.gender) {
-                        //
-                        //     console.log("不会请求数据库");
-                        //     _this.$message({
-                        //         message: '信息修改成功~',
-                        //         type: 'success'
-                        //     });
-                        //     return ;
-                        // }
-
                         const answerStr = JSON.stringify(_this.user);
                         const o = JSON.parse(answerStr);
                         const r = JSON.stringify(o);
@@ -402,6 +390,8 @@
                                 });
                                 setTimeout(_this.refresh, 1000);
 
+                            }else if (resp.data.code === 400) {
+                                _this.$message.error(resp.data.msg);
                             } else {
                                 _this.$message.error('未知错误,请联系管理员');
                             }
