--- a/src/main/webapp/worker.html
+++ b/src/main/webapp/worker.html
@@ -25,11 +25,17 @@
     <el-aside width="200px" style="background-color: rgb(238, 241, 246)">
         <el-menu :default-openeds="['1', '3']">
 
-            <el-menu-item index="1">工程小组</el-menu-item>
+            <el-menu-item index="1">
+                <el-button @click="teamButton" target="_blank">工程小队</el-button>
+            </el-menu-item>
 
-            <el-button @click="personInfo" target="_blank">个人信息</el-button>
+            <el-menu-item index="2">
+                <el-button @click="personInfo" target="_blank">个人信息</el-button>
+            </el-menu-item>
 
-            <el-menu-item index="3">消息通知</el-menu-item>
+            <el-menu-item index="3">
+                <el-button @click="noticeButton" target="_blank">消息通知</el-button>
+            </el-menu-item>
         </el-menu>
     </el-aside>
 
@@ -173,7 +179,7 @@
         <el-form :inline="true" :model="queryUser" class="queryUser">
 
             <el-form-item label="小工姓名">
-                <el-input v-model="queryUser.userName" placeholder="小工姓名"></el-input>
+                <el-input v-model.trim="queryUser.userName" placeholder="小工姓名"></el-input>
             </el-form-item>
 
             <el-form-item label="性别">
@@ -582,7 +588,7 @@
                         data: row.userId,
                     }).then(function (resp) {
                         if (resp.data.code === 200) {
-                            setTimeout(_this.refresh, 100);
+                            setTimeout(_this.refresh, 500);
                         }
                     })
                 }).catch(() => {
@@ -644,7 +650,7 @@
                                 document.getElementById("teamAddButton").disabled = true;
                                 _this.teamAddFormVisible = false;
                                 _this.$message.success("任务添加成功");
-                                setTimeout(_this.refresh, 100);
+                                setTimeout(_this.refresh, 500);
                             }
                         })
                     } else {
@@ -723,7 +729,7 @@
                         data: row.userId + "&" + row.taskId,
                     }).then(function (resp) {
                         if (resp.data.code === 200) {
-                            setTimeout(_this.refresh, 100);
+                            setTimeout(_this.refresh, 500);
                         }
                     })
 
@@ -774,7 +780,7 @@
 
                                 _this.dialogFormVisible = false;
                                 _this.$message.success("任务添加成功");
-                                setTimeout(_this.refresh, 100);
+                                setTimeout(_this.refresh, 500);
                             }
                         })
                     } else {
@@ -830,7 +836,7 @@
                     if (resp.data.code === 200) {
                         _this.$message.success("恭喜你,任务已完成");
                         _this.myTaskTableData[0].taskId = 0;
-                        setTimeout(_this.refresh, 100);
+                        setTimeout(_this.refresh, 500);
 
                     } else if (resp.data.code === 600210) {
                         _this.$message.error(resp.data.msg);
@@ -843,6 +849,14 @@
             //个人信息跳转
             personInfo() {
                 window.location.href = "http://localhost:8080/qg-engineering-management-system/personalInfo.html";
+            },
+
+            teamButton(){
+                window.location.href = "http://localhost:8080/qg-engineering-management-system/worker.html";
+            },
+
+            noticeButton(){
+                window.location.href = "http://localhost:8080/qg-engineering-management-system/notice.html";
             },
 
             refresh() {
